--- a/public/css/styleVaccine.css
+++ b/public/css/styleVaccine.css
@@ -79,7 +79,7 @@ p{
       height: 12px;
       transform: translateY(-50%);
       border-radius: 50%;
-      background: #F45B69;
+      background: #312a2a;
   }
   
   .timeline ol li div.timelineText {
@@ -218,3 +218,100 @@ p{
           padding-right: 30px;
       }
   }
+
+
+
+
+/* -------------------------- PARA CUADRO CON BORDE ANIMADO ---------------------- */
+
+.box{
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  /* height: 100px; */
+  background: #111845a6;
+  box-sizing: border-box;
+  overflow: hidden;
+  box-shadow: 0 3px 15px rgb(23, 32, 90);
+  /* border: 2px solid #2a3cad; */
+  color: white;
+  padding: 10px;
+}
+
+
+.box span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    box-sizing: border-box;
+}
+
+.box span:nth-child(1)
+{
+  transform:rotate(0deg);
+}
+
+/* .box span:nth-child(2)
+{
+  transform:rotate(90deg);
+} */
+
+.box span:nth-child(3)
+{
+  transform:rotate(180deg);
+}
+
+/* .box span:nth-child(4)
+{
+  transform:rotate(270deg);
+} */
+
+.box span:before
+{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: #50dfdb;
+  animation: animate 4s linear infinite;
+}
+
+.box span.span2:before
+{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: #50dfdb;
+  animation: animate 4s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform:scaleX(0);
+    transform-origin: left;
+  }
+  50%
+  {
+    transform:scaleX(1);
+    transform-origin: left;
+  }
+  50.1%
+  {
+    transform:scaleX(1);
+  transform-origin: right;
+    
+  }
+  
+  100%
+  {
+    transform:scaleX(0);
+  transform-origin: right;
+    
+  }
+} 
